Only default target for easter

--- a/easter.html
+++ b/easter.html
@@ -32,8 +32,8 @@
             setupGame( "Pixel Parachute (Easter)", {
                 path: "https://cdn.jsdelivr.net/gh/pixelplush",
                 bg: "game-parachute/bcg",
-                target: [ "game-parachute/easter_theme/target_easter1", "game-parachute/easter_theme/target_easter2", "game-parachute/easter_theme/target_easter3", "game-parachute/easter_theme/target_easter4", "game-parachute/easter_theme/target_easter5", "game-parachute/easter_theme/target_easter6" ],
-                target_random: true,
+                target: "game-parachute/easter_theme/target_easter1",//[ "game-parachute/easter_theme/target_easter1", "game-parachute/easter_theme/target_easter2", "game-parachute/easter_theme/target_easter3", "game-parachute/easter_theme/target_easter4", "game-parachute/easter_theme/target_easter5", "game-parachute/easter_theme/target_easter6" ],
+                // target_random: true,
                 target_front: "game-parachute/easter_theme/target_easter_front",
                 target_offset: -1,
                 target_width: 384,
