--- a/pool_red.html
+++ b/pool_red.html
@@ -75,11 +75,8 @@
                     "sammie": "sammie",
                     "boy": "boy",
                     "girl": "girl",
-                    "snowman": "snowman",
-                    "elf": "elf",
-                    "elfgirl": "elfgirl",
                 },
-                playable: [ "snowman", "elf", "elfgirl" ],
+                playable: [ "boy", "girl" ],
             }, {
                 channel: params.get( "channel" ),
                 oauth: params.get( "oauth" ),
