Rainbow confetti pride

--- a/pride.html
+++ b/pride.html
@@ -42,9 +42,18 @@
         		target_offset: -45,
         		target_width: 384,
         		target_y_offset: 50,
-                // target_boosh: [ "game-parachute/spring_theme/petal1", "game-parachute/spring_theme/petal2", "game-parachute/spring_theme/petal3", "game-parachute/spring_theme/petal4", "game-parachute/spring_theme/petal5",
-                //     "game-parachute/spring_theme/petal6", "game-parachute/spring_theme/petal7", "game-parachute/spring_theme/petal8", "game-parachute/spring_theme/petal9", "game-parachute/spring_theme/petal10",
-                //     "game-parachute/spring_theme/petal11", "game-parachute/spring_theme/petal12" ],
+                target_boosh: [ "confetti_overlay/confetti1/confetti1_yellow", "confetti_overlay/confetti1/confetti1_skyblue", "confetti_overlay/confetti1/confetti1_red", "confetti_overlay/confetti1/confetti1_purple",
+                    "confetti_overlay/confetti1/confetti1_pink", "confetti_overlay/confetti1/confetti1_orange", "confetti_overlay/confetti1/confetti1_green", "confetti_overlay/confetti1/confetti1_darkyellow", "confetti_overlay/confetti1/confetti1_blue",
+                    "confetti_overlay/confetti2/confetti2_yellow", "confetti_overlay/confetti2/confetti2_skyblue", "confetti_overlay/confetti2/confetti2_red", "confetti_overlay/confetti2/confetti2_purple",
+                    "confetti_overlay/confetti2/confetti2_pink", "confetti_overlay/confetti2/confetti2_orange", "confetti_overlay/confetti2/confetti2_green", "confetti_overlay/confetti2/confetti2_darkyellow", "confetti_overlay/confetti2/confetti2_blue",
+                    "confetti_overlay/confetti3/confetti3_yellow", "confetti_overlay/confetti3/confetti3_skyblue", "confetti_overlay/confetti3/confetti3_red", "confetti_overlay/confetti3/confetti3_purple",
+                    "confetti_overlay/confetti3/confetti3_pink", "confetti_overlay/confetti3/confetti3_orange", "confetti_overlay/confetti3/confetti3_green", "confetti_overlay/confetti3/confetti3_darkyellow", "confetti_overlay/confetti3/confetti3_blue",
+                    "confetti_overlay/confetti4/confetti4_yellow", "confetti_overlay/confetti4/confetti4_skyblue", "confetti_overlay/confetti4/confetti4_red", "confetti_overlay/confetti4/confetti4_purple",
+                    "confetti_overlay/confetti4/confetti4_pink", "confetti_overlay/confetti4/confetti4_orange", "confetti_overlay/confetti4/confetti4_green", "confetti_overlay/confetti4/confetti4_darkyellow", "confetti_overlay/confetti4/confetti4_blue",
+                    "confetti_overlay/confetti5/confetti5_yellow", "confetti_overlay/confetti5/confetti5_skyblue", "confetti_overlay/confetti5/confetti5_red", "confetti_overlay/confetti5/confetti5_purple",
+                    "confetti_overlay/confetti5/confetti5_pink", "confetti_overlay/confetti5/confetti5_orange", "confetti_overlay/confetti5/confetti5_green", "confetti_overlay/confetti5/confetti5_darkyellow", "confetti_overlay/confetti5/confetti5_blue",
+                    "confetti_overlay/confetti6/confetti6_yellow", "confetti_overlay/confetti6/confetti6_skyblue", "confetti_overlay/confetti6/confetti6_red", "confetti_overlay/confetti6/confetti6_purple",
+                    "confetti_overlay/confetti6/confetti6_pink", "confetti_overlay/confetti6/confetti6_orange", "confetti_overlay/confetti6/confetti6_green", "confetti_overlay/confetti6/confetti6_darkyellow", "confetti_overlay/confetti6/confetti6_blue", ],
                 clouds: [ "game-parachute/pride_theme/cloud1", "game-parachute/pride_theme/cloud2", "game-parachute/pride_theme/cloud3", "game-parachute/pride_theme/cloud4", "game-parachute/pride_theme/cloud5" ],
                 parachute_offset: 0,
         		pridechutes: {
