require rainbow add-on

--- a/pride.html
+++ b/pride.html
@@ -30,7 +30,7 @@
         <script>
             const params = new URLSearchParams( location.search );
             setupGame( "Pixel Parachute (Rainbow)", {
-        		// requires: "addon_parachute_rainbow",
+        		requires: "addon_parachute_rainbow",
                 path: "https://cdn.jsdelivr.net/gh/pixelplush",
                 bg: "game-parachute/pride_theme/bcg",
         		target: [ "game-parachute/pride_theme/target/target_pride1", "game-parachute/pride_theme/target/target_pride2", "game-parachute/pride_theme/target/target_pride3",
