--- a/pool_red.html
+++ b/pool_red.html
@@ -13,7 +13,7 @@
         </script>
         <link rel="stylesheet" href="web/fonts.css" />
         <script src="https://cdn.jsdelivr.net/npm/tinycolor2/dist/tinycolor-min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/pinkfluffyunicorn@1.0.2/dist/pinkfluffyunicorn.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/gh/pixelplush/assets/pinkfluffyunicorn.min.js"></script>
         <script src="web/twemoji-parser.js"></script>
         <script src="web/parachute.min.js"></script>
         <style>
