--- a/cake_rainbow.html
+++ b/cake_rainbow.html
@@ -32,35 +32,21 @@
             setupGame( "Pixel Parachute (Rainbow Cake)", {
         		// requires: "addon_parachute_rainbow",
                 path: "https://cdn.jsdelivr.net/gh/pixelplush",
-				bg: "game-parachute/cake_theme/cake_chocolate/bcg",
-				target: [ "game-parachute/cake_theme/cake_chocolate/target_cake_pixelplush_back1",
-								"game-parachute/cake_theme/cake_chocolate/target_cake_pixelplush_back1",
-								"game-parachute/cake_theme/cake_chocolate/target_cake_pixelplush_back1",
-								"game-parachute/cake_theme/cake_chocolate/target_cake_pixelplush_back2",
-								"game-parachute/cake_theme/cake_chocolate/target_cake_pixelplush_back2",
-								"game-parachute/cake_theme/cake_chocolate/target_cake_pixelplush_back2",
-								"game-parachute/cake_theme/cake_chocolate/target_cake_pixelplush_back3",
-								"game-parachute/cake_theme/cake_chocolate/target_cake_pixelplush_back3",
-								"game-parachute/cake_theme/cake_chocolate/target_cake_pixelplush_back3",
-								"game-parachute/cake_theme/cake_chocolate/target_cake_pixelplush_back4",
-								"game-parachute/cake_theme/cake_chocolate/target_cake_pixelplush_back4",
-								"game-parachute/cake_theme/cake_chocolate/target_cake_pixelplush_back4",
-								"game-parachute/cake_theme/cake_chocolate/target_cake_pixelplush_back5",
-								"game-parachute/cake_theme/cake_chocolate/target_cake_pixelplush_back5",
-								"game-parachute/cake_theme/cake_chocolate/target_cake_pixelplush_back5",
-				],
-				target_front: "game-parachute/cake_theme/cake_chocolate/target_cake_pixelplush_front_credit1",
-				target_offset: -35,
+				bg: "game-parachute/cake_theme/cake_rainbow/bcg",
+				target: "game-parachute/cake_theme/cake_rainbow/target_cake_rainbow_back",
+				target_front: "game-parachute/cake_theme/cake_rainbow/target_cake_rainbow_front_credit",
+				target_offset: -10,
 				target_width: 384,
 				target_y_offset: 50,
-				target_walls: 75,
+				target_walls: 48,
 				target_collide_land: 0,
-				clouds: [ "game-parachute/cake_theme/cake_chocolate/cloud1", "game-parachute/cake_theme/cake_chocolate/cloud2", "game-parachute/cake_theme/cake_chocolate/cloud3", "game-parachute/cake_theme/cake_chocolate/cloud4", "game-parachute/cake_theme/cake_chocolate/cloud5" ],
+				clouds: [ "game-parachute/cake_theme/cake_rainbow/cloud1", "game-parachute/cake_theme/cake_rainbow/cloud2", "game-parachute/cake_theme/cake_rainbow/cloud3", "game-parachute/cake_theme/cake_rainbow/cloud4", "game-parachute/cake_theme/cake_rainbow/cloud5" ],
 				parachute_offset: 0,
 				parachutes: [
-					"game-parachute/cake_theme/cake_chocolate/chutes_cake_chocolate_brown",
-					"game-parachute/cake_theme/cake_chocolate/chutes_cake_chocolate_mix",
-					"game-parachute/cake_theme/cake_chocolate/chutes_cake_chocolate_white",
+					"game-parachute/cake_theme/cake_rainbow/chutes_cake_rainbow_blue",
+					"game-parachute/cake_theme/cake_rainbow/chutes_cake_rainbow_green",
+					"game-parachute/cake_theme/cake_rainbow/chutes_cake_rainbow_pink",
+					"game-parachute/cake_theme/cake_rainbow/chutes_cake_rainbow_yellow",
 				],
                 droplets: [
                     "items/droplets/greydroplet2",
