--- a/cake_fruit.html
+++ b/cake_fruit.html
@@ -40,6 +40,7 @@
 				target_y_offset: 50,
 				target_walls: 48,
 				target_collide_land: 0,
+				target_particles: [ "#ffffff" ],
 				clouds: [ "game-parachute/cake_theme/cake_fruit/cloud1", "game-parachute/cake_theme/cake_fruit/cloud2", "game-parachute/cake_theme/cake_fruit/cloud3", "game-parachute/cake_theme/cake_fruit/cloud4", "game-parachute/cake_theme/cake_fruit/cloud5" ],
 				parachute_offset: 0,
 				parachutes: [
@@ -50,12 +51,12 @@
 					"game-parachute/cake_theme/cake_fruit/chutes_cake_fruit_white",
 				],
                 droplets: [
-                    "items/droplets/greydroplet2",
-                    "items/droplets/purpledroplet2",
-                    "items/droplets/greendroplet2",
-                    "items/droplets/bluedroplet2",
-                    "items/droplets/reddroplet2",
-                    "items/droplets/yellowdroplet2",
+					"game-parachute/cake_theme/cake_fruit/droplet1",
+					"game-parachute/cake_theme/cake_fruit/droplet2",
+					"game-parachute/cake_theme/cake_fruit/droplet3",
+					"game-parachute/cake_theme/cake_fruit/droplet4",
+					"game-parachute/cake_theme/cake_fruit/droplet5",
+					"game-parachute/cake_theme/cake_fruit/droplet6",
                 ],
                 dropletSizes: [
                     1.5,
