--- a/cake_rainbow.html
+++ b/cake_rainbow.html
@@ -40,6 +40,7 @@
 				target_y_offset: 50,
 				target_walls: 48,
 				target_collide_land: 0,
+				target_particles: [ "#ffffff" ],
 				clouds: [ "game-parachute/cake_theme/cake_rainbow/cloud1", "game-parachute/cake_theme/cake_rainbow/cloud2", "game-parachute/cake_theme/cake_rainbow/cloud3", "game-parachute/cake_theme/cake_rainbow/cloud4", "game-parachute/cake_theme/cake_rainbow/cloud5" ],
 				parachute_offset: 0,
 				parachutes: [
@@ -49,12 +50,12 @@
 					"game-parachute/cake_theme/cake_rainbow/chutes_cake_rainbow_yellow",
 				],
                 droplets: [
-                    "items/droplets/greydroplet2",
-                    "items/droplets/purpledroplet2",
-                    "items/droplets/greendroplet2",
-                    "items/droplets/bluedroplet2",
-                    "items/droplets/reddroplet2",
-                    "items/droplets/yellowdroplet2",
+					"game-parachute/cake_theme/cake_rainbow/droplet1",
+					"game-parachute/cake_theme/cake_rainbow/droplet3",
+					"game-parachute/cake_theme/cake_rainbow/droplet5",
+					"game-parachute/cake_theme/cake_rainbow/droplet8",
+					"game-parachute/cake_theme/cake_rainbow/droplet9",
+					"game-parachute/cake_theme/cake_rainbow/droplet10",
                 ],
                 dropletSizes: [
                     1.5,
