--- a/cake_pixelplush.html
+++ b/cake_pixelplush.html
@@ -55,6 +55,7 @@
 				target_y_offset: 50,
 				target_walls: 75,
 				target_collide_land: 0,
+				target_particles: [ "#45291e" ],
 				clouds: [ "game-parachute/cake_theme/cake_chocolate/cloud1", "game-parachute/cake_theme/cake_chocolate/cloud2", "game-parachute/cake_theme/cake_chocolate/cloud3", "game-parachute/cake_theme/cake_chocolate/cloud4", "game-parachute/cake_theme/cake_chocolate/cloud5" ],
 				parachute_offset: 0,
 				parachutes: [
@@ -63,12 +64,12 @@
 					"game-parachute/cake_theme/cake_chocolate/chutes_cake_chocolate_white",
 				],
                 droplets: [
-                    "items/droplets/greydroplet2",
-                    "items/droplets/purpledroplet2",
-                    "items/droplets/greendroplet2",
-                    "items/droplets/bluedroplet2",
-                    "items/droplets/reddroplet2",
-                    "items/droplets/yellowdroplet2",
+					"game-parachute/cake_theme/cake_chocolate/droplet1",
+					"game-parachute/cake_theme/cake_chocolate/droplet2",
+					"game-parachute/cake_theme/cake_chocolate/droplet3",
+					"game-parachute/cake_theme/cake_chocolate/droplet4",
+					"game-parachute/cake_theme/cake_chocolate/droplet5",
+					"game-parachute/cake_theme/cake_chocolate/droplet5",
                 ],
                 dropletSizes: [
                     1.5,
