--- a/cake_choco.html
+++ b/cake_choco.html
@@ -30,7 +30,7 @@
         <script>
             const params = new URLSearchParams( location.search );
             setupGame( "Pixel Parachute (Chocolate Cake)", {
-        		// requires: "addon_parachute_rainbow",
+        		requires: "addon_parachute_cakechoco",
                 path: "https://cdn.jsdelivr.net/gh/pixelplush",
 				bg: "game-parachute/cake_theme/cake_chocolate/bcg",
 				target: "game-parachute/cake_theme/cake_chocolate/target_cake_chocolate_back",
