--- a/cake_fruit.html
+++ b/cake_fruit.html
@@ -30,7 +30,7 @@
         <script>
             const params = new URLSearchParams( location.search );
             setupGame( "Pixel Parachute (Fruit Cake)", {
-        		// requires: "addon_parachute_rainbow",
+        		requires: "addon_parachute_cakefruit",
                 path: "https://cdn.jsdelivr.net/gh/pixelplush",
 				bg: "game-parachute/cake_theme/cake_fruit/bcg",
 				target: "game-parachute/cake_theme/cake_fruit/target_cake_fruit_back",
