--- a/cake_rainbow.html
+++ b/cake_rainbow.html
@@ -30,7 +30,7 @@
         <script>
             const params = new URLSearchParams( location.search );
             setupGame( "Pixel Parachute (Rainbow Cake)", {
-        		// requires: "addon_parachute_rainbow",
+        		requires: "addon_parachute_cakerainbow",
                 path: "https://cdn.jsdelivr.net/gh/pixelplush",
 				bg: "game-parachute/cake_theme/cake_rainbow/bcg",
 				target: "game-parachute/cake_theme/cake_rainbow/target_cake_rainbow_back",
