--- a/pool_blue.html
+++ b/pool_blue.html
@@ -33,8 +33,11 @@
                 path: "https://cdn.jsdelivr.net/gh/pixelplush",
                 bg: "game-parachute/bcg",
                 target: [ "game-parachute/target_pool_blue/target_pool_blue1", "game-parachute/target_pool_blue/target_pool_blue2", "game-parachute/target_pool_blue/target_pool_blue3", "game-parachute/target_pool_blue/target_pool_blue4", "game-parachute/target_pool_blue/target_pool_blue5", "game-parachute/target_pool_blue/target_pool_blue6", "game-parachute/target_pool_blue/target_pool_blue7", "game-parachute/target_pool_blue/target_pool_blue8", "game-parachute/target_pool_blue/target_pool_blue9" ],
-                target_offset: -12,
+                target_offset: 30,
                 target_width: 384,
+                target_y_offset: 50,
+        		target_walls: 28,
+        		target_collide_land: 30,
                 target_particles: [ "#74cbfb", "#50b0e5" ],
                 clouds: [ "game-parachute/cloud1", "game-parachute/cloud2", "game-parachute/cloud3", "game-parachute/cloud4", "game-parachute/cloud5" ],
                 parachutes: [
