--- a/pool_red.html
+++ b/pool_red.html
@@ -33,8 +33,11 @@
                 path: "https://cdn.jsdelivr.net/gh/pixelplush",
                 bg: "game-parachute/bcg",
                 target: [ "game-parachute/target_pool_red/target_pool_red1", "game-parachute/target_pool_red/target_pool_red2", "game-parachute/target_pool_red/target_pool_red3", "game-parachute/target_pool_red/target_pool_red4", "game-parachute/target_pool_red/target_pool_red5", "game-parachute/target_pool_red/target_pool_red6", "game-parachute/target_pool_red/target_pool_red7", "game-parachute/target_pool_red/target_pool_red8", "game-parachute/target_pool_red/target_pool_red9" ],
-                target_offset: -12,
+                target_offset: 30,
                 target_width: 384,
+                target_y_offset: 50,
+        		target_walls: 28,
+        		target_collide_land: 30,
                 target_particles: [ "#74cbfb", "#50b0e5" ],
                 clouds: [ "game-parachute/cloud1", "game-parachute/cloud2", "game-parachute/cloud3", "game-parachute/cloud4", "game-parachute/cloud5" ],
                 parachutes: [
