--- a/winter.html
+++ b/winter.html
@@ -91,7 +91,10 @@
                 cpDropCost: params.get( "cpDropCost" ),
                 cpDroplets: params.get( "cpDroplets" ),
                 cpDropletsCost: params.get( "cpDropletsCost" ),
-                cpDropletsCD: params.get( "cpDropletsCD" )
+                cpDropletsCD: params.get( "cpDropletsCD" ),
+        		cpQueue: params.get( "cpQueue" ),
+        		cpQueueCost: params.get( "cpQueueCost" ),
+        		cpQueueCD: params.get( "cpQueueCD" ),
             });
         </script>
     </body>
