--- a/autumn.html
+++ b/autumn.html
@@ -53,6 +53,14 @@
                     "items/acorn",
                     "items/pinecone",
                 ],
+                dropletSizes: [
+                  0.5,
+                  0.5,
+                  0.5,
+                  0.5,
+                  0.5,
+                  0.5,
+                ],
                 target_sound: "sfx/dry_leaf.mp3",
                 drop_sound: "sfx/woodrop.mp3",
                 parachute_sound: "sfx/parachuteflap.mp3",
