--- a/cake_pixelplush.html
+++ b/cake_pixelplush.html
@@ -30,7 +30,7 @@
         <script>
             const params = new URLSearchParams( location.search );
             setupGame( "Pixel Parachute (PixelPlush Cake)", {
-        		// requires: "addon_parachute_rainbow",
+        		requires: "addon_parachute_cakeplush",
                 path: "https://cdn.jsdelivr.net/gh/pixelplush",
 				bg: "game-parachute/cake_theme/cake_chocolate/bcg",
 				target: [ "game-parachute/cake_theme/cake_chocolate/target_cake_pixelplush_back1",
