--- a/cauldron_colors.html
+++ b/cauldron_colors.html
@@ -28,13 +28,48 @@
         <div id="unicorn-display"></div>
         <script>
             const params = new URLSearchParams( location.search );
-            setupGame( "Pixel Parachute (Purple Cauldron)", {
+            setupGame( "Pixel Parachute (Color-Changing Cauldron)", {
         		// requires: "addon_parachute_cauldron",
                 path: "https://cdn.jsdelivr.net/gh/pixelplush",
                 bg: "game-parachute/bcg_night",
                 target: "game-parachute/cauldron/cauldron_base_credit",
-        		target_overlay: Array.from( { length: 20 }, ( _, i ) => `game-parachute/cauldron/cauldron_purple/cauldron_purple${i+1}` ),
-        		target_effect: Array.from( { length: 18 }, ( _, i ) => `game-parachute/cauldron/cauldron_purple/land_effect_purple/land_effect_purple${i+1}` ),
+        		target_versions: {
+        			yellow: {
+        				target: "game-parachute/cauldron/cauldron_base_credit",
+        				target_overlay: Array.from( { length: 20 }, ( _, i ) => `game-parachute/cauldron/cauldron_yellow/cauldron_yellow${i+1}` ),
+        				target_effect: Array.from( { length: 17 }, ( _, i ) => `game-parachute/cauldron/cauldron_yellow/land_effect_yellow/land_effect_yellow${i+1}` ),
+        			},
+        			red: {
+        				target: "game-parachute/cauldron/cauldron_base_credit",
+        				target_overlay: Array.from( { length: 20 }, ( _, i ) => `game-parachute/cauldron/cauldron_red/cauldron_red${i+1}` ),
+        				target_effect: Array.from( { length: 15 }, ( _, i ) => `game-parachute/cauldron/cauldron_red/land_effect_red/land_effect_red${i+1}` ),
+        			},
+        			pink: {
+        				target: "game-parachute/cauldron/cauldron_base_credit",
+        				target_overlay: Array.from( { length: 20 }, ( _, i ) => `game-parachute/cauldron/cauldron_pink/cauldron_pink${i+1}` ),
+        				target_effect: Array.from( { length: 13 }, ( _, i ) => `game-parachute/cauldron/cauldron_pink/land_effect_pink/land_effect_pink${i+1}` ),
+        			},
+        			orange: {
+        				target: "game-parachute/cauldron/cauldron_base_credit",
+        				target_overlay: Array.from( { length: 20 }, ( _, i ) => `game-parachute/cauldron/cauldron_orange/cauldron_orange${i+1}` ),
+        				target_effect: Array.from( { length: 18 }, ( _, i ) => `game-parachute/cauldron/cauldron_orange/land_effect_orange/land_effect_orange${i+1}` ),
+        			},
+        			purple: {
+        				target: "game-parachute/cauldron/cauldron_base_credit",
+        				target_overlay: Array.from( { length: 20 }, ( _, i ) => `game-parachute/cauldron/cauldron_purple/cauldron_purple${i+1}` ),
+        				target_effect: Array.from( { length: 18 }, ( _, i ) => `game-parachute/cauldron/cauldron_purple/land_effect_purple/land_effect_purple${i+1}` ),
+        			},
+        			green: {
+        				target: "game-parachute/cauldron/cauldron_base_credit",
+        				target_overlay: Array.from( { length: 20 }, ( _, i ) => `game-parachute/cauldron/cauldron_green/cauldron_green${i+1}` ),
+        				target_effect: Array.from( { length: 14 }, ( _, i ) => `game-parachute/cauldron/cauldron_green/land_effect_green/land_effect_green${i+1}` ),
+        			},
+        			blue: {
+        				target: "game-parachute/cauldron/cauldron_base_credit",
+        				target_overlay: Array.from( { length: 20 }, ( _, i ) => `game-parachute/cauldron/cauldron_blue/cauldron_blue${i+1}` ),
+        				target_effect: Array.from( { length: 13 }, ( _, i ) => `game-parachute/cauldron/cauldron_blue/land_effect_blue/land_effect_blue${i+1}` ),
+        			}
+        		},
         		target_offset: -34,
         		target_width: 384,
         		target_y_offset: 50,//14,
@@ -43,7 +78,7 @@
         		target_particles: [ "#64c424", "#64c424" ],
                 clouds: [ "game-parachute/cloud1_night", "game-parachute/cloud2_night", "game-parachute/cloud3_night", "game-parachute/cloud4_night", "game-parachute/cloud5_night" ],
                 parachutes: [
-                    "game-parachute/chute_black", "game-parachute/chute_black_purple",
+                    "game-parachute/chute_black", "game-parachute/chute_black_yellow",
                 ],
                 droplets: [
                     [ "items/candycorn", "items/green_treat", "items/pink_treat" ],
