Cauldron Required Add-On

--- a/cauldron_purple.html
+++ b/cauldron_purple.html
@@ -29,7 +29,7 @@
         <script>
             const params = new URLSearchParams( location.search );
             setupGame( "Pixel Parachute (Purple Cauldron)", {
-        		// requires: "addon_parachute_cauldron",
+        		requires: "addon_parachute_cauldron",
                 path: "https://cdn.jsdelivr.net/gh/pixelplush",
                 bg: "game-parachute/bcg_night",
                 target: "game-parachute/cauldron/cauldron_base_credit",
