--- a/retro.html
+++ b/retro.html
@@ -86,6 +86,7 @@
         		cpQueue: params.get( "cpQueue" ),
         		cpQueueCost: params.get( "cpQueueCost" ),
         		cpQueueCD: params.get( "cpQueueCD" ),
+                spawnZombies: params.get( "spawnZombies" ),
             });
         </script>
     </body>
