Fix Halloween Theme Name

--- a/halloween.html
+++ b/halloween.html
@@ -28,7 +28,7 @@
         <div id="unicorn-display"></div>
         <script>
             const params = new URLSearchParams( location.search );
-            setupGame( "Pixel Parachute (Autumn)", {
+            setupGame( "Pixel Parachute (Halloween)", {
                 path: "https://cdn.jsdelivr.net/gh/pixelplush",
                 bg: "game-parachute/bcg_night",
                 target: [ "game-parachute/cauldron/cauldron1", "game-parachute/cauldron/cauldron2", "game-parachute/cauldron/cauldron3", "game-parachute/cauldron/cauldron4", "game-parachute/cauldron/cauldron5", "game-parachute/cauldron/cauldron6", "game-parachute/cauldron/cauldron7", "game-parachute/cauldron/cauldron8", "game-parachute/cauldron/cauldron9",
