Set default characters to boy/girl

--- a/autumn.html
+++ b/autumn.html
@@ -72,10 +72,8 @@
                     "sammie": "sammie",
                     "boy": "boy",
                     "girl": "girl",
-                    "amanita": "amanita",
-                    "twiglet": "twiglet",
                 },
-                playable: [ "amanita", "twiglet" ],
+                playable: [ "boy", "girl" ],
             }, {
                 channel: params.get( "channel" ),
                 oauth: params.get( "oauth" ),
