--- a/easter.html
+++ b/easter.html
@@ -80,10 +80,10 @@
                     "avellana": "avelana",
                     "jimmy": "jimmy",
                     "sammie": "sammie",
-                    "chick": "chick",
-                    "rabbit": "rabbit",
+                    "boy": "boy",
+                    "girl": "girl",
                 },
-                playable: [ "chick", "rabbit" ],
+                playable: [ "boy", "girl" ],
             }, {
                 channel: params.get( "channel" ),
                 oauth: params.get( "oauth" ),
