--- a/halloween.html
+++ b/halloween.html
@@ -68,11 +68,8 @@
                     "sammie": "sammie",
                     "boy": "boy",
                     "girl": "girl",
-                    "witch": "witch",
-                    "vampire": "vampire",
-                    "zombie": "zombie",
                 },
-                playable: [ "witch", "vampire", "zombie" ],
+                playable: [ "boy", "girl" ],
             }, {
                 channel: params.get( "channel" ),
                 oauth: params.get( "oauth" ),
