--- a/christmas.html
+++ b/christmas.html
@@ -68,13 +68,10 @@
                     "avellana": "avelana",
                     "jimmy": "jimmy",
                     "sammie": "sammie",
-                    "santa": "santa",
-                    "claus": "claus",
-                    // "snowman": "snowman",
-                    "elf": "elf",
-                    "elfgirl": "elfgirl",
+                    "boy": "girl",
+                    "girl": "girl",
                 },
-                playable: [ "santa", "claus", "elf", "elfgirl" ],
+                playable: [ "boy", "girl" ],
             }, {
                 channel: params.get( "channel" ),
                 oauth: params.get( "oauth" ),
