--- a/spring.html
+++ b/spring.html
@@ -29,7 +29,7 @@
         <div id="unicorn-display"></div>
         <script>
             const params = new URLSearchParams( location.search );
-            setupGame( "Pixel Parachute (Spring)", {
+            setupGame( "Pixel Parachute (Cherry Blossoms)", {
                 requires: "addon_parachute_blossoms",
                 path: "https://cdn.jsdelivr.net/gh/pixelplush",
                 bg: "game-parachute/spring_theme/bcg",
