Add boy/girl to premium defaults

--- a/cauldron_colors.html
+++ b/cauldron_colors.html
@@ -110,7 +110,7 @@
                     "vampire": "vampire",
                     "zombie": "zombie",
                 },
-                playable: [ "witch", "vampire", "zombie" ],
+                playable: [ "boy", "girl", "witch", "vampire", "zombie" ],
             }, {
                 channel: params.get( "channel" ),
                 oauth: params.get( "oauth" ),
