--- a/cauldron_pink.html
+++ b/cauldron_pink.html
@@ -75,7 +75,7 @@
                     "vampire": "vampire",
                     "zombie": "zombie",
                 },
-                playable: [ "witch", "vampire", "zombie" ],
+                playable: [ "boy", "girl", "witch", "vampire", "zombie" ],
             }, {
                 channel: params.get( "channel" ),
                 oauth: params.get( "oauth" ),
