--- a/spring.html
+++ b/spring.html
@@ -74,7 +74,7 @@
                     "calendula": "calendula",
                     "poppy": "poppy",
                 },
-                playable: [ "bellflower", "calendula", "poppy" ],
+                playable: [ "boy", "girl", "bellflower", "calendula", "poppy" ],
             }, {
                 channel: params.get( "channel" ),
                 oauth: params.get( "oauth" ),
