Add all parachutes to rainbow

--- a/cauldron_colors.html
+++ b/cauldron_colors.html
@@ -78,7 +78,10 @@
         		target_particles: [ "#64c424", "#64c424" ],
                 clouds: [ "game-parachute/cloud1_night", "game-parachute/cloud2_night", "game-parachute/cloud3_night", "game-parachute/cloud4_night", "game-parachute/cloud5_night" ],
                 parachutes: [
-                    "game-parachute/chute_black", "game-parachute/chute_black_yellow",
+                    "game-parachute/chute_black",
+        			"game-parachute/chute_black_blue", "game-parachute/chute_black_green", "game-parachute/chute_black_orange",
+        			"game-parachute/chute_black_pink", "game-parachute/chute_black_purple", "game-parachute/chute_black_red",
+        			"game-parachute/chute_black_yellow",
                 ],
                 droplets: [
                     [ "items/candycorn", "items/green_treat", "items/pink_treat" ],
