Update Halloween theme offset & collision

--- a/halloween.html
+++ b/halloween.html
@@ -34,8 +34,10 @@
                 target: [ "game-parachute/cauldron/cauldron1", "game-parachute/cauldron/cauldron2", "game-parachute/cauldron/cauldron3", "game-parachute/cauldron/cauldron4", "game-parachute/cauldron/cauldron5", "game-parachute/cauldron/cauldron6", "game-parachute/cauldron/cauldron7", "game-parachute/cauldron/cauldron8", "game-parachute/cauldron/cauldron9",
                           "game-parachute/cauldron/cauldron11", "game-parachute/cauldron/cauldron12", "game-parachute/cauldron/cauldron13", "game-parachute/cauldron/cauldron14", "game-parachute/cauldron/cauldron15", "game-parachute/cauldron/cauldron16", "game-parachute/cauldron/cauldron17", "game-parachute/cauldron/cauldron18", "game-parachute/cauldron/cauldron19", "game-parachute/cauldron/cauldron20"],
                 target_offset: -34,
-                target_width: 384,
-                target_y_offset: 14,
+          		target_width: 384,
+          		target_y_offset: 50,//14,
+          		target_walls: 70,
+          		target_collide_land: 20,
                 target_particles: [ "#64c424", "#64c424" ],
                 clouds: [ "game-parachute/cloud1_night", "game-parachute/cloud2_night", "game-parachute/cloud3_night", "game-parachute/cloud4_night", "game-parachute/cloud5_night" ],
                 parachutes: [
