--- a/cake_choco.html
+++ b/cake_choco.html
@@ -23,6 +23,9 @@
                 padding: 0;
                 border: 0;
             }
+            body {
+              overflow: hidden;
+            }
         </style>
     </head>
     <body>
