--- a/cauldron_blue.html
+++ b/cauldron_blue.html
@@ -22,6 +22,9 @@
                 padding: 0;
                 border: 0;
             }
+            body {
+              overflow: hidden;
+            }
         </style>
     </head>
     <body>
