--- a/halloween.html
+++ b/halloween.html
@@ -22,6 +22,9 @@
                 padding: 0;
                 border: 0;
             }
+            body {
+              overflow: hidden;
+            }
         </style>
     </head>
     <body>
