--- a/retro.html
+++ b/retro.html
@@ -23,6 +23,9 @@
                 padding: 0;
                 border: 0;
             }
+            body {
+              overflow: hidden;
+            }
             #unicorn-display {
                 filter: grayscale();
             }
