--- a/cake_rainbow.html
+++ b/cake_rainbow.html
@@ -102,6 +102,7 @@
         		cpQueueCost: params.get( "cpQueueCost" ),
         		cpQueueCD: params.get( "cpQueueCD" ),
                 spawnZombies: params.get( "spawnZombies" ),
+              readyTime: params.get( "readyTime" ),
             });
         </script>
     </body>
