--- a/cauldron_colors.html
+++ b/cauldron_colors.html
@@ -140,6 +140,7 @@
         		cpQueueCost: params.get( "cpQueueCost" ),
         		cpQueueCD: params.get( "cpQueueCD" ),
                 spawnZombies: params.get( "spawnZombies" ),
+              readyTime: params.get( "readyTime" ),
             });
         </script>
     </body>
