--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
         		cpQueueCost: params.get( "cpQueueCost" ),
         		cpQueueCD: params.get( "cpQueueCD" ),
                 spawnZombies: params.get( "spawnZombies" ),
+              readyTime: params.get( "readyTime" ),
             });
         </script>
     </body>
