--- a/retro.html
+++ b/retro.html
@@ -90,6 +90,7 @@
         		cpQueueCost: params.get( "cpQueueCost" ),
         		cpQueueCD: params.get( "cpQueueCD" ),
                 spawnZombies: params.get( "spawnZombies" ),
+              readyTime: params.get( "readyTime" ),
             });
         </script>
     </body>
