--- a/winter.html
+++ b/winter.html
@@ -96,6 +96,7 @@
         		cpQueueCost: params.get( "cpQueueCost" ),
         		cpQueueCD: params.get( "cpQueueCD" ),
                 spawnZombies: params.get( "spawnZombies" ),
+              readyTime: params.get( "readyTime" ),
             });
         </script>
     </body>
