--- a/cake_pixelplush.html
+++ b/cake_pixelplush.html
@@ -83,6 +83,7 @@
 					0.5,
                 ],
                 // target_sound: "sfx/dry_leaf.mp3",
+                queue_sound: "sfx/group_queue.mp3",
                 drop_sound: "sfx/woodrop.mp3",
                 parachute_sound: "sfx/parachuteflap.mp3",
                 characters: {
@@ -115,8 +116,9 @@
         		cpQueue: params.get( "cpQueue" ),
         		cpQueueCost: params.get( "cpQueueCost" ),
         		cpQueueCD: params.get( "cpQueueCD" ),
+                queueSound: params.get( "queueSound" ),
                 spawnZombies: params.get( "spawnZombies" ),
-              readyTime: params.get( "readyTime" ),
+                readyTime: params.get( "readyTime" ),
             });
         </script>
     </body>
