--- a/cauldron_purple.html
+++ b/cauldron_purple.html
@@ -21,7 +21,7 @@
                 margin: 0;
                 padding: 0;
                 border: 0;
-            }https://www.instagram.com/p/CVybYWMrUOb/
+            }
         </style>
     </head>
     <body>
@@ -61,6 +61,7 @@
                     0.5,
                     0.5,
                 ],
+                queue_sound: "sfx/group_queue.mp3",
                 drop_sound: "sfx/woodrop.mp3",
                 parachute_sound: "sfx/parachuteflap.mp3",
                 characters: {
@@ -98,8 +99,9 @@
         		cpQueue: params.get( "cpQueue" ),
         		cpQueueCost: params.get( "cpQueueCost" ),
         		cpQueueCD: params.get( "cpQueueCD" ),
+                queueSound: params.get( "queueSound" ),
                 spawnZombies: params.get( "spawnZombies" ),
-              readyTime: params.get( "readyTime" ),
+                readyTime: params.get( "readyTime" ),
             });
         </script>
     </body>
