--- a/easter.html
+++ b/easter.html
@@ -75,6 +75,7 @@
                     "items/egg"
                 ],
                 target_sound: "sfx/dry_leaf.mp3",
+                queue_sound: "sfx/group_queue.mp3",
                 drop_sound: "sfx/woodrop.mp3",
                 parachute_sound: "sfx/parachuteflap.mp3",
                 characters: {
@@ -107,8 +108,9 @@
         		cpQueue: params.get( "cpQueue" ),
         		cpQueueCost: params.get( "cpQueueCost" ),
         		cpQueueCD: params.get( "cpQueueCD" ),
+                queueSound: params.get( "queueSound" ),
                 spawnZombies: params.get( "spawnZombies" ),
-              readyTime: params.get( "readyTime" ),
+                readyTime: params.get( "readyTime" ),
             });
         </script>
     </body>
