--- a/night.html
+++ b/night.html
@@ -64,6 +64,7 @@
                     1,
                     1,
                 ],
+                queue_sound: "sfx/group_queue.mp3",
                 drop_sound: "sfx/woodrop.mp3",
                 parachute_sound: "sfx/parachuteflap.mp3",
                 characters: {
@@ -96,8 +97,9 @@
         		cpQueue: params.get( "cpQueue" ),
         		cpQueueCost: params.get( "cpQueueCost" ),
         		cpQueueCD: params.get( "cpQueueCD" ),
+                queueSound: params.get( "queueSound" ),
                 spawnZombies: params.get( "spawnZombies" ),
-              readyTime: params.get( "readyTime" ),
+                readyTime: params.get( "readyTime" ),
             });
         </script>
     </body>
