--- a/pool_red.html
+++ b/pool_red.html
@@ -71,6 +71,7 @@
                     1,
                 ],
                 target_sound: "sfx/droplet.mp3",
+                queue_sound: "sfx/group_queue.mp3",
                 drop_sound: "sfx/woodrop.mp3",
                 parachute_sound: "sfx/parachuteflap.mp3",
                 characters: {
@@ -103,8 +104,9 @@
         		cpQueue: params.get( "cpQueue" ),
         		cpQueueCost: params.get( "cpQueueCost" ),
         		cpQueueCD: params.get( "cpQueueCD" ),
+                queueSound: params.get( "queueSound" ),
                 spawnZombies: params.get( "spawnZombies" ),
-              readyTime: params.get( "readyTime" ),
+                readyTime: params.get( "readyTime" ),
             });
         </script>
     </body>
